--- a/bookmarks.html
+++ b/bookmarks.html
@@ -22,8 +22,8 @@
     </main>
     <footer>
       <ul class="navfooter">
-        <li class="active">Home</li>
-        <li><a href="bookmarks.html">Bookmarks</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li class="active">Bookmark</li>
         <li>Profile</li>
       </ul>
     </footer>
