--- a/bookmarks.html
+++ b/bookmarks.html
@@ -11,12 +11,12 @@
     <main>
       <section class="qcard">
         <div class="bookmark">🚩</div>
-        <h2>What was the tallest Dinosaur?</h2>
+        <h2>What property flips the axes in flexbox?</h2>
         <button class="showanswer">Show answer</button>
-        <nav class="categories-nav">
-          <span>Dino #1</span>
-          <span>Dino #2</span>
-          <span>Dino #3</span>
+        <nav class="categories">
+          <span class="tag">#html</span>
+          <span class="tag">#flexbox</span>
+          <span class="tag">#css</span>
         </nav>
       </section>
     </main>
