--- a/bookmarks.html
+++ b/bookmarks.html
@@ -23,7 +23,7 @@
     <footer>
       <ul class="navfooter">
         <li><a href="index.html">Home</a></li>
-        <li class="active">Bookmark</li>
+        <li class="active">Bookmarks</li>
         <li>Profile</li>
       </ul>
     </footer>
