--- a/profile.html
+++ b/profile.html
@@ -9,22 +9,15 @@
   <body>
     <h1>Quiz App 🤔⁉️</h1>
     <main>
-      <section class="qcard">
-        <div class="bookmark">🏳️</div>
-        <h2>What property flips the axes in flexbox?</h2>
-        <button class="showanswer">Show answer</button>
-        <nav class="categories">
-          <span class="tag">#html</span>
-          <span class="tag">#flexbox</span>
-          <span class="tag">#css</span>
-        </nav>
+      <section class="profile">
+        <h2>profile</h2>
       </section>
     </main>
     <footer>
       <ul class="navfooter">
-        <li class="active">Home</li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="bookmarks.html">Bookmarks</a></li>
-        <li><a href="profile.html">Profile</a></li>
+        <li class="active">Profile</li>
       </ul>
     </footer>
   </body>
