--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
         <div class="bookmark">🏳️</div>
         <h2>What property flips the axes in flexbox?</h2>
         <button class="showanswer">Show answer</button>
-        <nav class="categories">
+        <div class="categories">
           <span class="tag">#html</span>
           <span class="tag">#flexbox</span>
           <span class="tag">#css</span>
-        </nav>
+        </div>
       </section>
     </main>
     <footer>
