--- a/bookmarks.html
+++ b/bookmarks.html
@@ -13,18 +13,18 @@
         <div class="bookmark">🚩</div>
         <h2>What property flips the axes in flexbox?</h2>
         <button class="showanswer">Show answer</button>
-        <nav class="categories">
+        <div class="categories">
           <span class="tag">#html</span>
           <span class="tag">#flexbox</span>
           <span class="tag">#css</span>
-        </nav>
+        </div>
       </section>
     </main>
     <footer>
       <ul class="navfooter">
         <li><a href="index.html">Home</a></li>
         <li class="active">Bookmarks</li>
-        <li>Profile</li>
+        <li><a href="profile.html">Profile</a></li>
       </ul>
     </footer>
   </body>
