--- a/profile.html
+++ b/profile.html
@@ -10,7 +10,21 @@
     <h1>Quiz App 🤔⁉️</h1>
     <main>
       <section class="profile">
-        <h2>profile</h2>
+        <h2>My Profile</h2>
+        <aside class="profilepicname">
+          <img href="abc" alt="Picture"></img>
+          Leonard Momber
+        </aside>
+          
+       
+        <h3 class="aboutme">About me</h3>
+        <article>
+          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
+          nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
+          sed diam voluptua. At vero eos et accusam et justo duo dolores et ea
+          rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem
+          ipsum dolor sit amet.
+        </article>
       </section>
     </main>
     <footer>
