--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Quiz App 🤔⁉️</h1>
     <main>
       <section class="qcard">
-        <div class="bookmark">🏳️</div>
+        <div class="bookmark" aria-label="white flag">🏳️</div>
         <h2>What property flips the axes in flexbox?</h2>
         <button class="showanswer">Show answer</button>
         <div class="categories">
