--- a/profile.html
+++ b/profile.html
@@ -12,13 +12,13 @@
       <section class="profile">
         <h2>My Profile</h2>
         <aside class="profilepicname">
-          <img href="abc" alt="Picture"></img>
+          <img href="" alt="Picture"></img>
           Leonard Momber
         </aside>
           
        
         <h3 class="aboutme">About me</h3>
-        <article>
+        <article class="aboutme2">
           Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
           nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
           sed diam voluptua. At vero eos et accusam et justo duo dolores et ea
