--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
       <section class="qcard">
         <div class="bookmark" aria-label="white flag">🏳️</div>
         <h2>What property flips the axes in flexbox?</h2>
-        <button class="showanswer">Show answer</button>
+        <div class="buttoncenter">
+          <button class="showanswer">Show answer</button>
+        </div>
         <div class="categories">
           <span class="tag">#html</span>
           <span class="tag">#flexbox</span>
