--- a/profile.html
+++ b/profile.html
@@ -6,7 +6,8 @@
     <title>Quiz-App</title>
     <link rel="stylesheet" type="text/css" href="/styles.css" />
   </head>
-  <body>
+  <script src="./index.js" defer></script>
+  <body data-js="body">
     <h1>Quiz App 🤔⁉️</h1>
     <main>
       
@@ -31,6 +32,11 @@
       <div class="counterq">???</div>
       <div class="counterbook">🚩🏳️</div> 
       </section>
+
+<section class="darkmode">
+  <button class="buttondm" data-js="dark-mode-button">Switch to darkmode</button>
+</section>
+
     </main>
     
     <footer>
