--- a/profile.html
+++ b/profile.html
@@ -34,7 +34,8 @@
       </section>
 
 <section class="darkmode">
-  <button class="buttondm" data-js="dark-mode-button">Switch to darkmode</button>
+  <button class="buttondarkmode" data-js="dark-mode-button">Switch to darkmode</button>
+  <button class="buttontoggle" data-js="dark-mode-toggle">Toggle darkmode</button>
 </section>
 
     </main>
@@ -43,6 +44,7 @@
       <ul class="navfooter">
         <li><a href="index.html">Home</a></li>
         <li><a href="bookmarks.html">Bookmarks</a></li>
+        <li><a href="form.html">Form</a></li>
         <li class="active">Profile</li>
       </ul>
     </footer>
