--- a/bookmarks.html
+++ b/bookmarks.html
@@ -6,6 +6,7 @@
     <title>Quiz-App</title>
     <link rel="stylesheet" type="text/css" href="/styles.css" />
   </head>
+  <script src="./index.js" defer></script>
   <body>
     <h1>Quiz App 🤔⁉️</h1>
     <main>
@@ -52,6 +53,7 @@
       <ul class="navfooter">
         <li><a href="index.html">Home</a></li>
         <li class="active">Bookmarks</li>
+        <li><a href="form.html">Form</a></li>
         <li><a href="profile.html">Profile</a></li>
       </ul>
     </footer>
