--- a/index.html
+++ b/index.html
@@ -6,15 +6,19 @@
     <title>Quiz-App</title>
     <link rel="stylesheet" type="text/css" href="/styles.css" />
   </head>
+  <script src="./index.js" defer></script>
   <body>
     <h1>Quiz App 🤔⁉️</h1>
     <main>
       <section class="qcard">
-        <div class="bookmark" aria-label="white flag">🏳️</div>
+        <div class="bookmark" data-js="bookmark" aria-label="white flag">
+          🏳️
+        </div>
         <h2>What property flips the axes in flexbox?</h2>
         <div class="buttoncenter">
-          <button class="showanswer">Show answer</button>
+          <button class="showanswer" data-js="showanswer">Show answer</button>
         </div>
+        <article class="answer" data-js="answer">THIS IS THE ANSWER</article>
         <div class="categories">
           <span class="tag">#html</span>
           <span class="tag">#flexbox</span>
@@ -26,6 +30,7 @@
       <ul class="navfooter">
         <li class="active">Home</li>
         <li><a href="bookmarks.html">Bookmarks</a></li>
+        <li><a href="form.html">Form</a></li>
         <li><a href="profile.html">Profile</a></li>
       </ul>
     </footer>
