--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
       <!--QUESTION BOX-->
       <section class="qcard">
         <!--FLAG BOOKMARKS toogle in JS-->
-        <div class="bookmark" data-js="bookmark" aria-label="white flag">
+        <button class="bookmark" data-js="bookmark" aria-label="white flag">
           🏳️
-        </div>
+        </button>
         <h2 class="question">QUESTION #1</h2>
         <!--BUTTON SHOWANSWER-->
         <button class="showanswer" data-js="showanswer">Show answer</button>
