--- a/form.html
+++ b/form.html
@@ -12,28 +12,19 @@
     <main>
       <!--FORM-->
       <form class="form" data-js="form">
-        <!--FIELDSET-->
-        <fieldset aria-labelledby="create your question">
-          <legend>Create your own Question here:</legend>
+        <!--QUESTION-->
+        <label for="your-question">Your question:</label>
+        <textarea type="text" id="yourQuestion" name="yourQuestion"></textarea>
+        <!--ANSWER-->
 
-          <!--QUESTION-->
-          <label for="your-question">Your question:</label>
-          <textarea
-            type="text"
-            id="yourQuestion"
-            name="yourQuestion"
-          ></textarea>
-          <!--ANSWER-->
+        <label for="your-answer">Your answer:</label>
+        <textarea type="text" id="yourAnswer" name="yourAnswer"></textarea>
+        <!--TAG-->
 
-          <label for="your-answer">Your answer:</label>
-          <textarea type="text" id="yourAnswer" name="yourAnswer"></textarea>
-          <!--TAG-->
-
-          <label for="your-tag">Tags please:</label>
-          <input type="text" id="yourTag" name="yourTag" />
-          <!--SEND IT!-->
-          <button type="submit">Submit</button>
-        </fieldset>
+        <label for="your-tag">Tags please:</label>
+        <input type="text" id="yourTag" name="yourTag" />
+        <!--SEND IT!-->
+        <button type="submit">Submit</button>
       </form>
       <!--NEW CARD-->
       <section id="cardContainer" data-js="cardContainer"></section>
