--- a/bookmarks.html
+++ b/bookmarks.html
@@ -9,46 +9,7 @@
   <script src="./index.js" defer></script>
   <body>
     <h1>Quiz App 🤔⁉️</h1>
-    <main>
-      <section class="qcard">
-        <div class="bookmark" aria-label="red flag">🚩</div>
-        <h2>What property flips the axes in flexbox?</h2>
-        <div class="buttoncenter">
-          <button class="showanswer">Show answer</button>
-        </div>
-        <div class="categories">
-          <span class="tag">#html</span>
-          <span class="tag">#flexbox</span>
-          <span class="tag">#css</span>
-        </div>
-      </section>
-
-      <section class="qcard">
-        <div class="bookmark" aria-label="red flag">🚩</div>
-        <h2>What property flips the axes in flexbox?</h2>
-        <div class="buttoncenter">
-          <button class="showanswer">Show answer</button>
-        </div>
-        <div class="categories">
-          <span class="tag">#html</span>
-          <span class="tag">#flexbox</span>
-          <span class="tag">#css</span>
-        </div>
-      </section>
-
-      <section class="qcard">
-        <div class="bookmark" aria-label="red flag">🚩</div>
-        <h2>What property flips the axes in flexbox?</h2>
-        <div class="buttoncenter">
-          <button class="showanswer">Show answer</button>
-        </div>
-        <div class="categories">
-          <span class="tag">#html</span>
-          <span class="tag">#flexbox</span>
-          <span class="tag">#css</span>
-        </div>
-      </section>
-    </main>
+    <main></main>
     <footer>
       <ul class="navfooter">
         <li><a href="index.html">Home</a></li>
